changed schema styling bus schema now has a fixed grid width with overflow scroll

--- a/Frontend/BusReservationsFrontend/src/app/components/bus-schema/bus-schema.component.css
+++ b/Frontend/BusReservationsFrontend/src/app/components/bus-schema/bus-schema.component.css
@@ -1,30 +1,43 @@
 :host {
   border: solid 0.5em #fdd835;
-  height: 100%;
-  width: fit-content;
+  box-sizing: border-box;
   display: flex;
-  flex-flow: column wrap;
-  padding: 5px;
-  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  width: fit-content;
+  max-width: 100%;
+  flex-grow: 0.3;
+  padding: 15px;
+}
+.wrapper {
+  overflow: scroll;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(5, 1fr);
+  grid-auto-flow: dense;
+  gap: 1rem;
+  padding: 4px;
 }
 .row {
-  width: 100%;
-  display: flex;
-  flex-flow: row wrap;
-  min-height: 3em;
+  grid-row: 3/4;
+  grid-column: 1/-1;
 }
 :host:nth-child(3) {
   justify-content: baseline;
 }
 .seat {
-  aspect-ratio: 1/1;
-  width: 6%;
-  aspect-ratio: 1/1;
-  margin: 0.1em;
-  font-size: 1.5em;
   border-radius: 4px;
   outline: none;
   font-weight: bold;
+  bottom: 0;
+  height: 5rem;
+  width: 5rem;
+  min-width: 0;
+  justify-self: center;
+  align-self: center;
+  font-size: 2.5rem;
 }
 
 .occupied {
@@ -37,35 +50,24 @@
 }
 @media only screen and (max-width: 900px) {
   .seat {
-    border-radius: 4px;
-    outline: none;
-    font-weight: bold;
-    min-width: 0;
-    line-height: normal;
-    padding: 0;
-    height: fit-content;
-    width: 7%;
-    font-size: 3em;
+    height: 4rem;
+    width: 4rem;
+    font-size: 1.5rem;
+  }
+  :host {
+    width: 100%;
+    margin-bottom: 3rem;
   }
 }
 @media only screen and (max-width: 600px) {
   .seat {
-    border-radius: 4px;
-    outline: none;
-    font-weight: bold;
-    min-width: 0;
-    line-height: normal;
-    height: fit-content;
-    min-width: 7%;
-    width: fit-content;
-    font-size: 1em;
-    padding: 1.2%;
+    height: 3rem;
+    width: 3rem;
+    font-size: 1rem;
   }
   :host {
-    overflow-y: scroll;
-    width: 89%;
-  }
-  .row {
-    min-height: 1em;
+    width: 100%;
+    margin-bottom: 3rem;
+    height: 20rem;
   }
 }
