--- a/Frontend/BusReservationsFrontend/src/app/components/tickets-list/tickets-list.component.css
+++ b/Frontend/BusReservationsFrontend/src/app/components/tickets-list/tickets-list.component.css
@@ -8,6 +8,7 @@ button {
 .actions {
   display: flex;
   flex-flow: column wrap;
+  row-gap: 1em;
 }
 .actions > button {
   width: 100%;
